LU-4023 build: wrong type used

Fixed implicit conversion from 'unsigned long long' to 'int'.

Signed-off-by: Dmitry Eremin <dmitry.eremin@intel.com>
Change-Id: I331a8ebe1fb9ef53ebd4fc92603b4100f006ee2b
Reviewed-on: http://review.whamcloud.com/7799
Tested-by: Hudson
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>